syntax = "proto3"; //Specify proto3 version.

package example; //Optional: unique package name.

service Chat { //Service class to be used by the clients
rpc login(LoginRequest) returns (LoginResponse){}
rpc sendMessage(SendMessageRequest) returns (SendMessageResponse){}
rpc receiveMessage(RecvMessage) returns (stream RecvMessageResponse){}
}

message LoginRequest{
string userId = 1;
string password = 2;
}

message LoginResponse{
string status =1;
string jwtToken=2;
}

message SendMessageRequest{
string recipientUserId = 1;
string messagesent = 2;
string jwtToken = 3;
}

message SendMessageResponse{
string status =1;
}

message RecvMessage{
string jwtToken =1;
}

message RecvMessageResponse{
string senderUserId = 1;
string messageRecv =2;
}
